files-swift/logs/Mistake-1 (1).txt
5.swift:23:20: error: cannot find 'Process' in scope
        let task = Process()
                   ^~~~~~~
5.swift:62:20: error: cannot find 'Process' in scope
        let task = Process()
                   ^~~~~~~
